# ml-os-task-scheduling-simulator

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  Makefile  PROJECT_SUMMARY.md  README.md  render.yaml  vercel.json
backend/: server.py
frontend/: app.js  index.html  manual.js  ml.html  simulator.html  styles.css  trained_model.js
include/sched/: benchmark.hpp  ml_model.hpp  scheduler.hpp  simulator.hpp  types.hpp  workload.hpp
models/: alibaba_xgboost_100k.json
scripts/: batch_predict_xgboost.py  evaluate_results.py  normalize_alibaba_trace.py  normalize_borg_trace.py  prepare_frontend_bundle.sh  train_linear.py  train_xgboost.py
src/: benchmark.cpp  feature_export.cpp  main.cpp  ml_model.cpp  simulator.cpp  trace_loader.cpp  types.cpp  workload.cpp
src/schedulers/: fifo_scheduler.cpp  ml_scheduler.cpp  mlfq_scheduler.cpp
tests/: test_scheduler.cpp
